<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4C60A5"
    android:padding="20dp"
    tools:context=".ui.MainActivity"
    android:id="@+id/main_layout">
    <ImageView
        android:id="@+id/welcome_IV"
        android:layout_width="151dp"
        android:layout_height="111dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/babu" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">
        <TextView
            android:id="@+id/welcome_TV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:padding="20dp"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textColor="#ADD4ED"
            android:textSize="30sp" />
        <TextView
            android:id="@+id/welcomeDesc_TV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_desc"
            android:textAlignment="center"
            android:textColor="#8E9BC7"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="20dp">
            <Button
                android:id="@+id/browse_BT"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_bg"
                android:text="@string/browse_BT"
                android:textColor="@android:color/white" />
            <Button
                android:id="@+id/search_BT"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_bg"
                android:text="@string/search_BT"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            android:paddingEnd="20dp">
            <Button
                android:id="@+id/playMusic_BT"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_bg"
                android:text="@string/playMusic_BT"
                android:textColor="@android:color/white"
                android:layout_gravity="center_horizontal"/>
            <Button
                android:id="@+id/stopMusic_BT"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_bg"
                android:text="@string/stopMusic_BT"
                android:textColor="@android:color/white"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>