<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.searchMovies.SearchMovieActivity"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="#8D97C8">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">
        <EditText
            android:id="@+id/searchTitle_ET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="13"
            android:inputType="text"
            android:hint="@string/searchByTitle"
            android:textColorHint="@android:color/white"/>
        <Button
            android:id="@+id/searchTitle_BT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_BT"
            android:background="@drawable/button_bg"
            android:onClick="onClickHandler"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">
        <EditText
            android:id="@+id/searchYear_ET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="13"
            android:inputType="text"
            android:hint="@string/searchByYear"
            android:textColorHint="@android:color/white"/>
        <Button
            android:id="@+id/searchYear_BT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_BT"
            android:background="@drawable/button_bg"
            android:onClick="onClickHandler"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">
        <EditText
            android:id="@+id/searchDirector_ET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="13"
            android:inputType="text"
            android:hint="@string/searchByDirector"
            android:textColorHint="@android:color/white"/>
        <Button
            android:id="@+id/searchDirector_BT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_BT"
            android:background="@drawable/button_bg"
            android:onClick="onClickHandler"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">
        <EditText
            android:id="@+id/searchGenre_ET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="13"
            android:inputType="text"
            android:hint="@string/searchByGenre"
            android:textColorHint="@android:color/white"/>
        <Button
            android:id="@+id/searchGenre_BT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_BT"
            android:background="@drawable/button_bg"
            android:onClick="onClickHandler"/>
    </LinearLayout>

    <fragment
        android:id="@+id/searchResult_fragment"
        android:name="com.example.potatopaloozac.codingchallengeproj.ui.searchMovies.SearchResultFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        tools:layout="@layout/search_result_fragment"/>
</LinearLayout>